parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COM
    IGN
    NL

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     block -> { instructions }
Rule 7     instruction -> block
Rule 8     instruction -> if
Rule 9     instruction -> for
Rule 10    instruction -> while
Rule 11    instruction -> break ;
Rule 12    instruction -> continue ;
Rule 13    instruction -> return ;
Rule 14    instruction -> print ;
Rule 15    instruction -> assign ;
Rule 16    if -> IF BOOLEAN_IN_PARENTHESES instruction
Rule 17    if -> IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
Rule 18    for -> FOR ID ASSIGN RANGE instruction
Rule 19    RANGE -> EXPRESSION : EXPRESSION
Rule 20    while -> WHILE BOOLEAN_IN_PARENTHESES instruction
Rule 21    break -> BREAK
Rule 22    continue -> CONTINUE
Rule 23    return -> RETURN
Rule 24    return -> RETURN EXPRESSION
Rule 25    return -> RETURN BOOLEAN_EXPRESSION
Rule 26    print -> PRINT PRINT_EXPR
Rule 27    assign -> ID ASSIGN EXPRESSION
Rule 28    assign -> ID ADDASSIGN EXPRESSION
Rule 29    assign -> ID MINASSIGN EXPRESSION
Rule 30    assign -> ID MULASSIGN EXPRESSION
Rule 31    assign -> ID DIVASSIGN EXPRESSION
Rule 32    assign -> ID [ INT , INT ] ASSIGN EXPRESSION
Rule 33    BOOLEAN_EXPRESSION -> EXPRESSION LT EXPRESSION
Rule 34    BOOLEAN_EXPRESSION -> EXPRESSION GT EXPRESSION
Rule 35    BOOLEAN_EXPRESSION -> EXPRESSION LTE EXPRESSION
Rule 36    BOOLEAN_EXPRESSION -> EXPRESSION GTE EXPRESSION
Rule 37    BOOLEAN_EXPRESSION -> EXPRESSION NE EXPRESSION
Rule 38    BOOLEAN_EXPRESSION -> EXPRESSION RELASSIGN EXPRESSION
Rule 39    EXPRESSION -> EXPRESSION ADD EXPRESSION
Rule 40    EXPRESSION -> EXPRESSION MIN EXPRESSION
Rule 41    EXPRESSION -> EXPRESSION MUL EXPRESSION
Rule 42    EXPRESSION -> EXPRESSION DIV EXPRESSION
Rule 43    EXPRESSION -> EXPRESSION DOTADD EXPRESSION
Rule 44    EXPRESSION -> EXPRESSION DOTMIN EXPRESSION
Rule 45    EXPRESSION -> EXPRESSION DOTMUL EXPRESSION
Rule 46    EXPRESSION -> EXPRESSION DOTDIV EXPRESSION
Rule 47    EXPRESSION -> MIN EXPRESSION
Rule 48    EXPRESSION -> EXPRESSION TRANSPOSE
Rule 49    EXPRESSION -> CONSTANT_EXPRESSION
Rule 50    CONSTANT_EXPRESSION -> MATRIX
Rule 51    CONSTANT_EXPRESSION -> MATRIX_FUNCTIONS
Rule 52    CONSTANT_EXPRESSION -> NUMBER
Rule 53    CONSTANT_EXPRESSION -> STR
Rule 54    CONSTANT_EXPRESSION -> ID
Rule 55    NUMBER -> INT
Rule 56    NUMBER -> FLOAT
Rule 57    MATRIX -> [ ROWS ]
Rule 58    ROWS -> ROWS ; ROW
Rule 59    ROWS -> ROW
Rule 60    ROW -> ROW , EXPRESSION
Rule 61    ROW -> EXPRESSION
Rule 62    MATRIX_FUNCTIONS -> EYE ( MULTIPLE_EXPR )
Rule 63    MATRIX_FUNCTIONS -> ZEROS ( MULTIPLE_EXPR )
Rule 64    MATRIX_FUNCTIONS -> ONES ( MULTIPLE_EXPR )
Rule 65    BOOLEAN_IN_PARENTHESES -> ( BOOLEAN_EXPRESSION )
Rule 66    MULTIPLE_EXPR -> MULTIPLE_EXPR , CONSTANT_EXPRESSION
Rule 67    MULTIPLE_EXPR -> CONSTANT_EXPRESSION
Rule 68    PRINT_EXPR -> MULTIPLE_EXPR

Terminals, with rules where they appear

(                    : 62 63 64 65
)                    : 62 63 64 65
,                    : 32 60 66
:                    : 19
;                    : 11 12 13 14 15 58
ADD                  : 39
ADDASSIGN            : 28
ASSIGN               : 18 27 32
BREAK                : 21
COM                  : 
CONTINUE             : 22
DIV                  : 42
DIVASSIGN            : 31
DOTADD               : 43
DOTDIV               : 46
DOTMIN               : 44
DOTMUL               : 45
ELSE                 : 17
EYE                  : 62
FLOAT                : 56
FOR                  : 18
GT                   : 34
GTE                  : 36
ID                   : 18 27 28 29 30 31 32 54
IF                   : 16 17
IGN                  : 
INT                  : 32 32 55
LT                   : 33
LTE                  : 35
MIN                  : 40 47
MINASSIGN            : 29
MUL                  : 41
MULASSIGN            : 30
NE                   : 37
NL                   : 
ONES                 : 64
PRINT                : 26
RELASSIGN            : 38
RETURN               : 23 24 25
STR                  : 53
TRANSPOSE            : 48
WHILE                : 20
ZEROS                : 63
[                    : 32 57
]                    : 32 57
error                : 
{                    : 6
}                    : 6

Nonterminals, with rules where they appear

BOOLEAN_EXPRESSION   : 25 65
BOOLEAN_IN_PARENTHESES : 16 17 20
CONSTANT_EXPRESSION  : 49 66 67
EXPRESSION           : 19 19 24 27 28 29 30 31 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48 60 61
MATRIX               : 50
MATRIX_FUNCTIONS     : 51
MULTIPLE_EXPR        : 62 63 64 66 68
NUMBER               : 52
PRINT_EXPR           : 26
RANGE                : 18
ROW                  : 58 59 60
ROWS                 : 57 58
assign               : 15
block                : 7
break                : 11
continue             : 12
for                  : 9
if                   : 8
instruction          : 4 5 16 17 17 18 20
instructions         : 2 4 6
instructions_opt     : 1
print                : 14
program              : 0
return               : 13
while                : 10

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (7) instruction -> . block
    (8) instruction -> . if
    (9) instruction -> . for
    (10) instruction -> . while
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . assign ;
    (6) block -> . { instructions }
    (16) if -> . IF BOOLEAN_IN_PARENTHESES instruction
    (17) if -> . IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (18) for -> . FOR ID ASSIGN RANGE instruction
    (20) while -> . WHILE BOOLEAN_IN_PARENTHESES instruction
    (21) break -> . BREAK
    (22) continue -> . CONTINUE
    (23) return -> . RETURN
    (24) return -> . RETURN EXPRESSION
    (25) return -> . RETURN BOOLEAN_EXPRESSION
    (26) print -> . PRINT PRINT_EXPR
    (27) assign -> . ID ASSIGN EXPRESSION
    (28) assign -> . ID ADDASSIGN EXPRESSION
    (29) assign -> . ID MINASSIGN EXPRESSION
    (30) assign -> . ID MULASSIGN EXPRESSION
    (31) assign -> . ID DIVASSIGN EXPRESSION
    (32) assign -> . ID [ INT , INT ] ASSIGN EXPRESSION

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    block                          shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    while                          shift and go to state 8
    break                          shift and go to state 9
    continue                       shift and go to state 10
    return                         shift and go to state 11
    print                          shift and go to state 12
    assign                         shift and go to state 13

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (7) instruction -> . block
    (8) instruction -> . if
    (9) instruction -> . for
    (10) instruction -> . while
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . assign ;
    (6) block -> . { instructions }
    (16) if -> . IF BOOLEAN_IN_PARENTHESES instruction
    (17) if -> . IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (18) for -> . FOR ID ASSIGN RANGE instruction
    (20) while -> . WHILE BOOLEAN_IN_PARENTHESES instruction
    (21) break -> . BREAK
    (22) continue -> . CONTINUE
    (23) return -> . RETURN
    (24) return -> . RETURN EXPRESSION
    (25) return -> . RETURN BOOLEAN_EXPRESSION
    (26) print -> . PRINT PRINT_EXPR
    (27) assign -> . ID ASSIGN EXPRESSION
    (28) assign -> . ID ADDASSIGN EXPRESSION
    (29) assign -> . ID MINASSIGN EXPRESSION
    (30) assign -> . ID MULASSIGN EXPRESSION
    (31) assign -> . ID DIVASSIGN EXPRESSION
    (32) assign -> . ID [ INT , INT ] ASSIGN EXPRESSION

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    ID              shift and go to state 17

    instruction                    shift and go to state 23
    block                          shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    while                          shift and go to state 8
    break                          shift and go to state 9
    continue                       shift and go to state 10
    return                         shift and go to state 11
    print                          shift and go to state 12
    assign                         shift and go to state 13

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)
    }               reduce using rule 5 (instructions -> instruction .)


state 5

    (7) instruction -> block .

    {               reduce using rule 7 (instruction -> block .)
    IF              reduce using rule 7 (instruction -> block .)
    FOR             reduce using rule 7 (instruction -> block .)
    WHILE           reduce using rule 7 (instruction -> block .)
    BREAK           reduce using rule 7 (instruction -> block .)
    CONTINUE        reduce using rule 7 (instruction -> block .)
    RETURN          reduce using rule 7 (instruction -> block .)
    PRINT           reduce using rule 7 (instruction -> block .)
    ID              reduce using rule 7 (instruction -> block .)
    $end            reduce using rule 7 (instruction -> block .)
    }               reduce using rule 7 (instruction -> block .)
    ELSE            reduce using rule 7 (instruction -> block .)


state 6

    (8) instruction -> if .

    {               reduce using rule 8 (instruction -> if .)
    IF              reduce using rule 8 (instruction -> if .)
    FOR             reduce using rule 8 (instruction -> if .)
    WHILE           reduce using rule 8 (instruction -> if .)
    BREAK           reduce using rule 8 (instruction -> if .)
    CONTINUE        reduce using rule 8 (instruction -> if .)
    RETURN          reduce using rule 8 (instruction -> if .)
    PRINT           reduce using rule 8 (instruction -> if .)
    ID              reduce using rule 8 (instruction -> if .)
    $end            reduce using rule 8 (instruction -> if .)
    }               reduce using rule 8 (instruction -> if .)
    ELSE            reduce using rule 8 (instruction -> if .)


state 7

    (9) instruction -> for .

    {               reduce using rule 9 (instruction -> for .)
    IF              reduce using rule 9 (instruction -> for .)
    FOR             reduce using rule 9 (instruction -> for .)
    WHILE           reduce using rule 9 (instruction -> for .)
    BREAK           reduce using rule 9 (instruction -> for .)
    CONTINUE        reduce using rule 9 (instruction -> for .)
    RETURN          reduce using rule 9 (instruction -> for .)
    PRINT           reduce using rule 9 (instruction -> for .)
    ID              reduce using rule 9 (instruction -> for .)
    $end            reduce using rule 9 (instruction -> for .)
    }               reduce using rule 9 (instruction -> for .)
    ELSE            reduce using rule 9 (instruction -> for .)


state 8

    (10) instruction -> while .

    {               reduce using rule 10 (instruction -> while .)
    IF              reduce using rule 10 (instruction -> while .)
    FOR             reduce using rule 10 (instruction -> while .)
    WHILE           reduce using rule 10 (instruction -> while .)
    BREAK           reduce using rule 10 (instruction -> while .)
    CONTINUE        reduce using rule 10 (instruction -> while .)
    RETURN          reduce using rule 10 (instruction -> while .)
    PRINT           reduce using rule 10 (instruction -> while .)
    ID              reduce using rule 10 (instruction -> while .)
    $end            reduce using rule 10 (instruction -> while .)
    }               reduce using rule 10 (instruction -> while .)
    ELSE            reduce using rule 10 (instruction -> while .)


state 9

    (11) instruction -> break . ;

    ;               shift and go to state 24


state 10

    (12) instruction -> continue . ;

    ;               shift and go to state 25


state 11

    (13) instruction -> return . ;

    ;               shift and go to state 26


state 12

    (14) instruction -> print . ;

    ;               shift and go to state 27


state 13

    (15) instruction -> assign . ;

    ;               shift and go to state 28


state 14

    (6) block -> { . instructions }
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (7) instruction -> . block
    (8) instruction -> . if
    (9) instruction -> . for
    (10) instruction -> . while
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . assign ;
    (6) block -> . { instructions }
    (16) if -> . IF BOOLEAN_IN_PARENTHESES instruction
    (17) if -> . IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (18) for -> . FOR ID ASSIGN RANGE instruction
    (20) while -> . WHILE BOOLEAN_IN_PARENTHESES instruction
    (21) break -> . BREAK
    (22) continue -> . CONTINUE
    (23) return -> . RETURN
    (24) return -> . RETURN EXPRESSION
    (25) return -> . RETURN BOOLEAN_EXPRESSION
    (26) print -> . PRINT PRINT_EXPR
    (27) assign -> . ID ASSIGN EXPRESSION
    (28) assign -> . ID ADDASSIGN EXPRESSION
    (29) assign -> . ID MINASSIGN EXPRESSION
    (30) assign -> . ID MULASSIGN EXPRESSION
    (31) assign -> . ID DIVASSIGN EXPRESSION
    (32) assign -> . ID [ INT , INT ] ASSIGN EXPRESSION

    {               shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    ID              shift and go to state 17

    instructions                   shift and go to state 29
    instruction                    shift and go to state 4
    block                          shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    while                          shift and go to state 8
    break                          shift and go to state 9
    continue                       shift and go to state 10
    return                         shift and go to state 11
    print                          shift and go to state 12
    assign                         shift and go to state 13

state 15

    (16) if -> IF . BOOLEAN_IN_PARENTHESES instruction
    (17) if -> IF . BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (65) BOOLEAN_IN_PARENTHESES -> . ( BOOLEAN_EXPRESSION )

    (               shift and go to state 31

    BOOLEAN_IN_PARENTHESES         shift and go to state 30

state 16

    (18) for -> FOR . ID ASSIGN RANGE instruction

    ID              shift and go to state 32


state 17

    (27) assign -> ID . ASSIGN EXPRESSION
    (28) assign -> ID . ADDASSIGN EXPRESSION
    (29) assign -> ID . MINASSIGN EXPRESSION
    (30) assign -> ID . MULASSIGN EXPRESSION
    (31) assign -> ID . DIVASSIGN EXPRESSION
    (32) assign -> ID . [ INT , INT ] ASSIGN EXPRESSION

    ASSIGN          shift and go to state 33
    ADDASSIGN       shift and go to state 34
    MINASSIGN       shift and go to state 35
    MULASSIGN       shift and go to state 36
    DIVASSIGN       shift and go to state 37
    [               shift and go to state 38


state 18

    (20) while -> WHILE . BOOLEAN_IN_PARENTHESES instruction
    (65) BOOLEAN_IN_PARENTHESES -> . ( BOOLEAN_EXPRESSION )

    (               shift and go to state 31

    BOOLEAN_IN_PARENTHESES         shift and go to state 39

state 19

    (21) break -> BREAK .

    ;               reduce using rule 21 (break -> BREAK .)


state 20

    (22) continue -> CONTINUE .

    ;               reduce using rule 22 (continue -> CONTINUE .)


state 21

    (23) return -> RETURN .
    (24) return -> RETURN . EXPRESSION
    (25) return -> RETURN . BOOLEAN_EXPRESSION
    (39) EXPRESSION -> . EXPRESSION ADD EXPRESSION
    (40) EXPRESSION -> . EXPRESSION MIN EXPRESSION
    (41) EXPRESSION -> . EXPRESSION MUL EXPRESSION
    (42) EXPRESSION -> . EXPRESSION DIV EXPRESSION
    (43) EXPRESSION -> . EXPRESSION DOTADD EXPRESSION
    (44) EXPRESSION -> . EXPRESSION DOTMIN EXPRESSION
    (45) EXPRESSION -> . EXPRESSION DOTMUL EXPRESSION
    (46) EXPRESSION -> . EXPRESSION DOTDIV EXPRESSION
    (47) EXPRESSION -> . MIN EXPRESSION
    (48) EXPRESSION -> . EXPRESSION TRANSPOSE
    (49) EXPRESSION -> . CONSTANT_EXPRESSION
    (33) BOOLEAN_EXPRESSION -> . EXPRESSION LT EXPRESSION
    (34) BOOLEAN_EXPRESSION -> . EXPRESSION GT EXPRESSION
    (35) BOOLEAN_EXPRESSION -> . EXPRESSION LTE EXPRESSION
    (36) BOOLEAN_EXPRESSION -> . EXPRESSION GTE EXPRESSION
    (37) BOOLEAN_EXPRESSION -> . EXPRESSION NE EXPRESSION
    (38) BOOLEAN_EXPRESSION -> . EXPRESSION RELASSIGN EXPRESSION
    (50) CONSTANT_EXPRESSION -> . MATRIX
    (51) CONSTANT_EXPRESSION -> . MATRIX_FUNCTIONS
    (52) CONSTANT_EXPRESSION -> . NUMBER
    (53) CONSTANT_EXPRESSION -> . STR
    (54) CONSTANT_EXPRESSION -> . ID
    (57) MATRIX -> . [ ROWS ]
    (62) MATRIX_FUNCTIONS -> . EYE ( MULTIPLE_EXPR )
    (63) MATRIX_FUNCTIONS -> . ZEROS ( MULTIPLE_EXPR )
    (64) MATRIX_FUNCTIONS -> . ONES ( MULTIPLE_EXPR )
    (55) NUMBER -> . INT
    (56) NUMBER -> . FLOAT

    ;               reduce using rule 23 (return -> RETURN .)
    MIN             shift and go to state 42
    STR             shift and go to state 47
    ID              shift and go to state 48
    [               shift and go to state 49
    EYE             shift and go to state 50
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    INT             shift and go to state 53
    FLOAT           shift and go to state 54

    EXPRESSION                     shift and go to state 40
    BOOLEAN_EXPRESSION             shift and go to state 41
    CONSTANT_EXPRESSION            shift and go to state 43
    MATRIX                         shift and go to state 44
    MATRIX_FUNCTIONS               shift and go to state 45
    NUMBER                         shift and go to state 46

state 22

    (26) print -> PRINT . PRINT_EXPR
    (68) PRINT_EXPR -> . MULTIPLE_EXPR
    (66) MULTIPLE_EXPR -> . MULTIPLE_EXPR , CONSTANT_EXPRESSION
    (67) MULTIPLE_EXPR -> . CONSTANT_EXPRESSION
    (50) CONSTANT_EXPRESSION -> . MATRIX
    (51) CONSTANT_EXPRESSION -> . MATRIX_FUNCTIONS
    (52) CONSTANT_EXPRESSION -> . NUMBER
    (53) CONSTANT_EXPRESSION -> . STR
    (54) CONSTANT_EXPRESSION -> . ID
    (57) MATRIX -> . [ ROWS ]
    (62) MATRIX_FUNCTIONS -> . EYE ( MULTIPLE_EXPR )
    (63) MATRIX_FUNCTIONS -> . ZEROS ( MULTIPLE_EXPR )
    (64) MATRIX_FUNCTIONS -> . ONES ( MULTIPLE_EXPR )
    (55) NUMBER -> . INT
    (56) NUMBER -> . FLOAT

    STR             shift and go to state 47
    ID              shift and go to state 48
    [               shift and go to state 49
    EYE             shift and go to state 50
    ZEROS           shift and go to state 51
    ONES            shift and go to state 52
    INT             shift and go to state 53
    FLOAT           shift and go to state 54

    PRINT_EXPR                     shift and go to state 55
    MULTIPLE_EXPR                  shift and go to state 56
    CONSTANT_EXPRESSION            shift and go to state 57
    MATRIX                         shift and go to state 44
    MATRIX_FUNCTIONS               shift and go to state 45
    NUMBER                         shift and go to state 46

state 23

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 24

    (11) instruction -> break ; .

    {               reduce using rule 11 (instruction -> break ; .)
    IF              reduce using rule 11 (instruction -> break ; .)
    FOR             reduce using rule 11 (instruction -> break ; .)
    WHILE           reduce using rule 11 (instruction -> break ; .)
    BREAK           reduce using rule 11 (instruction -> break ; .)
    CONTINUE        reduce using rule 11 (instruction -> break ; .)
    RETURN          reduce using rule 11 (instruction -> break ; .)
    PRINT           reduce using rule 11 (instruction -> break ; .)
    ID              reduce using rule 11 (instruction -> break ; .)
    $end            reduce using rule 11 (instruction -> break ; .)
    }               reduce using rule 11 (instruction -> break ; .)
    ELSE            reduce using rule 11 (instruction -> break ; .)


state 25

    (12) instruction -> continue ; .

    {               reduce using rule 12 (instruction -> continue ; .)
    IF              reduce using rule 12 (instruction -> continue ; .)
    FOR             reduce using rule 12 (instruction -> continue ; .)
    WHILE           reduce using rule 12 (instruction -> continue ; .)
    BREAK           reduce using rule 12 (instruction -> continue ; .)
    CONTINUE        reduce using rule 12 (instruction -> continue ; .)
    RETURN          reduce using rule 12 (instruction -> continue ; .)
    PRINT           reduce using rule 12 (instruction -> continue ; .)
    ID              reduce using rule 12 (instruction -> continue ; .)
    $end            reduce using rule 12 (instruction -> continue ; .)
    }               reduce using rule 12 (instruction -> continue ; .)
    ELSE            reduce using rule 12 (instruction -> continue ; .)


state 26

    (13) instruction -> return ; .

    {               reduce using rule 13 (instruction -> return ; .)
    IF              reduce using rule 13 (instruction -> return ; .)
    FOR             reduce using rule 13 (instruction -> return ; .)
    WHILE           reduce using rule 13 (instruction -> return ; .)
    BREAK           reduce using rule 13 (instruction -> return ; .)
    CONTINUE        reduce using rule 13 (instruction -> return ; .)
    RETURN          reduce using rule 13 (instruction -> return ; .)
    PRINT           reduce using rule 13 (instruction -> return ; .)
    ID              reduce using rule 13 (instruction -> return ; .)
    $end            reduce using rule 13 (instruction -> return ; .)
    }               reduce using rule 13 (instruction -> return ; .)
    ELSE            reduce using rule 13 (instruction -> return ; .)


state 27

    (14) instruction -> print ; .

    {               reduce using rule 14 (instruction -> print ; .)
    IF              reduce using rule 14 (instruction -> print ; .)
    FOR             reduce using rule 14 (instruction -> print ; .)
    WHILE           reduce using rule 14 (instruction -> print ; .)
    BREAK           reduce using rule 14 (instruction -> print ; .)
    CONTINUE        reduce using rule 14 (instruction -> print ; .)
    RETURN          reduce using rule 14 (instruction -> print ; .)
    PRINT           reduce using rule 14 (instruction -> print ; .)
    ID              reduce using rule 14 (instruction -> print ; .)
    $end            reduce using rule 14 (instruction -> print ; .)
    }               reduce using rule 14 (instruction -> print ; .)
    ELSE            reduce using rule 14 (instruction -> print ; .)


state 28

    (15) instruction -> assign ; .

    {               reduce using rule 15 (instruction -> assign ; .)
    IF              reduce using rule 15 (instruction -> assign ; .)
    FOR             reduce using rule 15 (instruction -> assign ; .)
    WHILE           reduce using rule 15 (instruction -> assign ; .)
    BREAK           reduce using rule 15 (instruction -> assign ; .)
    CONTINUE        reduce using rule 15 (instruction -> assign ; .)
    RETURN          reduce using rule 15 (instruction -> assign ; .)
    PRINT           reduce using rule 15 (instruction -> assign ; .)
    ID              reduce using rule 15 (instruction -> assign ; .)
    $end            reduce using rule 15 (instruction -> assign ; .)
    }               reduce using rule 15 (instruction -> assign ; .)
    ELSE            reduce using rule 15 (instruction -> assign ; .)


state 29

    (6) block -> { instructions . }
    (4) instructions -> instructions . instruction
    (7) instruction -> . block
    (8) instruction -> . if
    (9) instruction -> . for
    (10) instruction -> . while
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . assign ;
    (6) block -> . { instructions }
    (16) if -> . IF BOOLEAN_IN_PARENTHESES instruction
    (17) if -> . IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (18) for -> . FOR ID ASSIGN RANGE instruction
    (20) while -> . WHILE BOOLEAN_IN_PARENTHESES instruction
    (21) break -> . BREAK
    (22) continue -> . CONTINUE
    (23) return -> . RETURN
    (24) return -> . RETURN EXPRESSION
    (25) return -> . RETURN BOOLEAN_EXPRESSION
    (26) print -> . PRINT PRINT_EXPR
    (27) assign -> . ID ASSIGN EXPRESSION
    (28) assign -> . ID ADDASSIGN EXPRESSION
    (29) assign -> . ID MINASSIGN EXPRESSION
    (30) assign -> . ID MULASSIGN EXPRESSION
    (31) assign -> . ID DIVASSIGN EXPRESSION
    (32) assign -> . ID [ INT , INT ] ASSIGN EXPRESSION

    }               shift and go to state 58
    {               shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    ID              shift and go to state 17

    instruction                    shift and go to state 23
    block                          shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    while                          shift and go to state 8
    break                          shift and go to state 9
    continue                       shift and go to state 10
    return                         shift and go to state 11
    print                          shift and go to state 12
    assign                         shift and go to state 13

state 30

    (16) if -> IF BOOLEAN_IN_PARENTHESES . instruction
    (17) if -> IF BOOLEAN_IN_PARENTHESES . instruction ELSE instruction
    (7) instruction -> . block
    (8) instruction -> . if
    (9) instruction -> . for
    (10) instruction -> . while
    (11) instruction -> . break ;
    (12) instruction -> . continue ;
    (13) instruction -> . return ;
    (14) instruction -> . print ;
    (15) instruction -> . assign ;
    (6) block -> . { instructions }
    (16) if -> . IF BOOLEAN_IN_PARENTHESES instruction
    (17) if -> . IF BOOLEAN_IN_PARENTHESES instruction ELSE instruction
    (18) for -> . FOR ID ASSIGN RANGE instruction
    (20) while -> . WHILE BOOLEAN_IN_PARENTHESES instruction
    (21) break -> . BREAK
    (22) continue -> . CONTINUE
    (23) return -> . RETURN
    (24) return -> . RETURN EXPRESSION
    (25) return -> . RETURN BOOLEAN_EXPRESSION
    (26) print -> . PRINT PRINT_EXPR
    (27) assign -> . ID ASSIGN EXPRESSION
    (28) assign -> . ID ADDASSIGN EXPRESSION
    (29) assign -> . ID MINASSIGN EXPRESSION
    (30) assign -> . ID MULASSIGN EXPRESSION
    (31) assign -> . ID DIVASSIGN EXPRESSION
    (32) assign -> . ID [ INT , INT ] ASSIGN EXPRESSION

    {               shift and go to state 14
    IF              shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    BREAK           shift and go to state 19
    CONTINUE        shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    ID              shift and go to state 17

    instruction                    shift and go to state 59
    block                          shift and go to state 5
    if                             shift and go to state 6
    for                            shift and go to state 7
    while                          shift and go to state 8
    break                          shift and go to state 9
    continue                       shift and go to state 10
    return                         shift and go to state 11
    print                          shift and go to state 12
    assign                         shift and go to state 13

state 31
